Creación dinamica de asientos

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-</head>
-<body>
-    <form class="user">
-        <div class="form-group">
-            <input type="email" class="form-control form-control-user"
-                id="exampleInputEmail" aria-describedby="emailHelp"
-                placeholder="Enter Email Address...">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <title>Inicia sesión o registrate.</title>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+        <header>
+            <img class="logo" src="img/blackWolfHorizontal.png" alt="logo">
+            <nav>
+              
+            </nav>
+        </header>
+        <div class="container">
+                <form action="" class="login_form">
+                    <h1>Inicia Sesion o <a href="signup.html" class="register">Registrate</a> </h1><br>
+                    <label>
+                        <h4>Email</h4>
+                        <input type="text" id="exampleInputEmail">
+                    </label>
+                    <label>
+                        <h4>Contraseña</h4>
+                        <input type="password" id="exampleInputPassword">
+                    </label>
+                    <a href="resetpassword.html" class="reset_password">¿Olvidaste tu contraseña?</a>
+                    <button type="submit" formaction="index.html" class="login_button btnLogin">Entrar</button>
+                </form>
         </div>
-        <div class="form-group">
-            <input type="password" class="form-control form-control-user"
-                id="exampleInputPassword" placeholder="Password">
-        </div>
-        <a href="#" class="btnLogin btn btn-primary btn-user btn-block">
-            Login
-        </a>
-    </form>
-    <script src="js/login.js"></script>
-</body>
+        <footer>
+            <p class="footer_text">Black Wolf Cinema ®</p>
+        </footer>
+        <script src="js/login.js"></script>
+    </body>
 </html>
