--- a/src/main/resources/static/asientos.html
+++ b/src/main/resources/static/asientos.html
@@ -9,8 +9,7 @@
 <body>
     <h1>Desde asientos</h1>
     <h2>Pau</h2>
-    <div class="asientos">
-    </div>
+    <div class="asientos"></div>
     <script src="js/cinemaRoom.js"></script>
 </body>
 </html>
