--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -27,8 +27,7 @@
                         <h4>Contraseña</h4>
                         <input type="password" id="exampleInputPassword">
                     </label>
-                    <a href="resetpassword.html" class="reset_password">¿Olvidaste tu contraseña?</a>
-                    <button type="submit" formaction="index.html" class="login_button btnLogin">Entrar</button>
+                    <button type="submit" class="login_button btnLogin">Entrar</button>
                 </form>
         </div>
         <footer>
